--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,37 +1,31 @@
-<div class ="row">
+<div class="container">
+<div class="row">
 <h1 class="text-center">Dashboard</h1>
-
-<div class ="col-md-4">
-<h3 class="text-center"> Books <%= link_to "New Book", new_book_path, class: "btn btn-primary btn-sm" %> </h3>
-<table class="table table-condensed">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Book Name</th>
-          <th>Availabile</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-      	<% @books.each do |book| %>
-        <tr>
-          <th scope="row">1</th>
-          <td><%= book.id %></td>
-          <td><%= link_to book.name, book_path(book) %></td>
-          <td><%= book.availability %></td>
-          <td><%= link_to "Edit", edit_book_path(book) %></td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
+<div class="text-center"><%= link_to "New Book", new_book_path, class: "btn btn-primary btn-sm" %></div>
+<div class="clearfix"></div>
+<div class="col-md-4">
+<div class="dash-box">
+<h4 class="white uppercase">
+Books
+</h3>
 </div>
-
-<div class ="col-md-4">
-<h3 class="text-center"> Purchased </h3>
+<%= render "books" %>
 </div>
-
-<div class ="col-md-4">
-<h3 class="text-center"> Sales </h3>
+<div class="col-md-4">
+<div class="dash-box">
+<h4 class="white uppercase">
+Purchased
+</h3>
 </div>
-
+<%= render "purchased" %>
+</div>
+<div class="col-md-4">
+<div class="dash-box">
+<h4 class="white uppercase">
+Sales
+</h3>
+</div>
+<%= render "sales" %>
+</div>
+</div>
 </div>
