--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,6 +7,7 @@
   <p><%= @book.description %></p>
   <h4 class="text-center"> $ <%= @book.price.to_f / 100 %></h4>
 
+  <%= if current_user %>
   <%= form_tag buy_path(slug: @book.slug) do %>
 
     <script
@@ -18,6 +19,9 @@
     data-email="<%= current_user.email %>">
   </script>
 
+  <% end %>
+  <% else %>
+  <p>Please login first to buy</P>
   <% end %>
 
 </div>
