Repaired login show issue

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,12 +18,10 @@
     data-description="<%= @book.name %>"
     data-email="<%= current_user.email %>">
   </script>
-
   <% end %>
   <% else %>
-  <p>Please login first to buy</P>
+  <p>Please login first to buy</p>
   <% end %>
 
 </div>
-
 </div>
